syntax = "proto3";

package delegator;

service DelegatorService {
  rpc Delegator(stream DelegateRequest) returns (stream DelegateResponse) {}
}

message DelegateRequest { bytes cairo_pie = 1; }
message DelegateResponse { bytes proof = 1; }